--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DATABASE_URL='mysql://ljo2c67x3o3gutn5ldrd:pscale_pw_3t8rSILjV4PUhI2wzkLrzZL7bybkS5wpQNLPvTrETrT@aws.connect.psdb.cloud/izi-quizi?sslaccept=strict'
-NEXTAUTH_SECRET='lkljldslflskjflsj'
+DATABASE_URL='postgresql://faniejohnsons98:yofWnXh09zaR@ep-round-bar-48851039-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require'
 GOOGLE_CLIENT_ID='315134253913-qvc8scailoktic9i7tp53iumpnnr02gq.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='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'
